--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Welcome to My Blog</title>
 
 	<link rel="stylesheet" href="stylesheets/webglbook.css" /> 
-	<script src="javascripts/Three.js"></script>
+	<script src="javascripts/three.js"></script>
 	<script src="javascripts/RequestAnimationFrame.js"></script>
 	<script>
 	
