--- a/html5/hello.html
+++ b/html5/hello.html
@@ -41,7 +41,7 @@ var helloWorldImage = new Image();
 helloWorldImage.onload = function () {
 context.drawImage(helloWorldImage, 155, 110);
 }
-helloWorldImage.src = "helloworld.gif";
+helloWorldImage.src = "helloworld.png";
 //box
 context.strokeStyle = "#000000";
 context.strokeRect(5, 5, 490, 290);
