--- a/html5/hello.html
+++ b/html5/hello.html
@@ -35,7 +35,7 @@ context.fillRect(0, 0, 500, 300);
 context.fillStyle = "#000000";
 context.font = "20px Sans-Serif";
 context.textBaseline = "top";
-context.fillText ("Hello World!", 195, 80 );
+context.fillText ("Hello World,kenvifire!", 195, 80 );
 //image
 var helloWorldImage = new Image();
 helloWorldImage.onload = function () {
