--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@ layout: default
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
-				<img width="190" height="190" src="images/.png">
+				<img width="190" height="190" src="images/avatar-kenvi.jpg">
 				<h1>Kenvi</h1>
 				<p>Backend Software Engineer<br>
 					focus on </p>
