--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@ layout: default
 				<img width="190" height="190" src="images/avatar-kenvi.jpg">
 				<h1>Kenvi</h1>
 				<p>Backend Software Engineer<br>
-					focus on </p>
+					Focus on RealTime Messaging, Database System, High performance Service </p>
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
