--- a/projects/index.html
+++ b/projects/index.html
@@ -27,14 +27,14 @@ layout: default
 						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">Vimscript编程指南</h2>
 							<time>2015.09</time>
-							<img src="images/vimscript.png">
+							<img src="images/Vimscript.png">
 							<ul>
 								<li>
 									Vimscript编程指南	
 								</li>
 								<li class="skill">
 									<span><b>Vimscript</b></span>
-									<span class="link"><a target="_blank" href="https://kenvifire.gitbooks.io/vimscript/content/">Read it</a></span>
+									<span class="link"><a target="_blank" href="http://www.qingdan.us/product/6">Read it</a></span>
 								</li>
 							</ul>
 						</div>
