--- a/projects/index.html
+++ b/projects/index.html
@@ -27,7 +27,7 @@ layout: default
 						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">Vimscript编程指南</h2>
 							<time>2015.09</time>
-							<img src="images/Vimscript.png">
+							<img src="images/vimscript.png">
 							<ul>
 								<li>
 									Vimscript编程指南	
